--- a/templates/modules/_footer.twig
+++ b/templates/modules/_footer.twig
@@ -1,16 +1,14 @@
 {% import 'helpers/_macros.twig' as macros %}
 
-{% set legalItems = legal.menu.all %}
-
 <div class="py-2">
     <div class="container text-center">
         <div class="text-sm tracking-wider">
-            <span class="block sm:inline">&copy; {{ now|date('Y') }} {{ systemName }}</span>
-            {% if legalItems|length %}
-                <span class="hidden sm:inline">|</span>
+            <span class="block sm:inline">&copy; {{ now|date('Y') }} {{ seomatic.site.siteName }}</span>
+            {% if legal.menu|length %}
                 <menu class="inline-flex flex-wrap gap-2">
-                    {% for item in legalItems %}
-                        {{ macros.link(item.button, {}, 'li') }}
+                    {% for item in legal.menu %}
+                        <li class="hidden sm:inline">|</li>
+                        {{ macros.link(item, {}, 'li') }}
                     {% endfor %}
                 </menu>
             {% endif %}
