--- a/templates/layouts/_base.twig
+++ b/templates/layouts/_base.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="{{ craft.app.language }}" style="max-height: var(--viewport-height); --viewport-height: 100vh;">
+<html lang="{{ craft.app.language }}">
 <head>
-    {% set codeBlocks = code.codeBlocks.collect %}
+    {% set codeBlocks = scripts.codeBlocks.collect %}
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
