--- a/templates/modules/blocks/_text.twig
+++ b/templates/modules/blocks/_text.twig
@@ -1,3 +1,5 @@
+{% import 'helpers/_macros.twig' as macros %}
+
 {% set regex = '/src="([^"]+)"/m' %}
 {% set replace = 'srcset="$1?auto=compress,format&width=848, $1?auto=compress,format&width=1696 2x"' %}
 
@@ -7,7 +9,7 @@
             <div class="prose">
                 {% apply replace(getenv('AWS_CLOUDFRONT_URL'), getenv('IMGIX_URL'))|raw %}
                     {% apply replace(regex, replace)|raw %}
-                        {{ block.wysiwyg }}
+                        {{ block.richText }}
                     {% endapply %}
                 {% endapply %}
             </div>
